2006-08-29  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug printing text painting

2006-08-26  Stefan Jahn  <stefan@lkcc.org>

	* qucsdigi.bat: Closing stdin when running the simulator.

	* qtgeneric_tr.ts, qucs_tr.ts: Updated Turkish translations.
	Thanks to Ozgur.

	* Makefile.am (bin_SCRIPTS): Care about the host system when
	installing the qucsdigi script.

2006-08-19  Stefan Jahn  <stefan@lkcc.org>

	* qucs_hu.ts: Updated Hungarian translations.  Thanks to
	Joszef Bus.

	* qucsdigi: Closing stdin when simulating.

	* qucs_de.ts: Updated German translations.

	* dialogs/importdialog.cpp (slotBrowse): Added 'mdl' file type
	to the available data import data formats.

2006-08-12  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* no schematic frame during symbol edit
	* fixed bug showing "changed" after change to symbol edit mode
	* fixed bug in rectangular clipping algorithm
	* simulate VHDL file taken from memory

2006-08-09  Stefan Jahn  <stefan@lkcc.org>

	* qucs_es.ts: Updated spanish translations.  Thanks to Jose.

	* qucs_de.ts: Updated german translations.

2006-08-08  Stefan Jahn  <stefan@lkcc.org>

	* qucsdigi.bat: Unquoting the TIME argument correctly.

	* dialogs/simmessage.cpp: Using short path equivalent to pass
	it to the freehdl batch file under Win32.  This is a workaround
	because of the limited quoting abilities for these batch files.

2006-07-31  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* update content list after changing the project
	* prevent entering empty string in graphic text dialog
	* change library component per component properties

2006-07-29  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* wire label frame becomes red if initial voltage is set
	* update content list when expanding ListViewItem
	* dialog for optimization component (still unfinished)
	* fixed segfault after dropping document on untitled page

2006-07-19  Stefan Jahn  <stefan@lkcc.org>
