@@ -1,3 +1,12 @@
+2006-08-30  Stefan Jahn  <stefan@lkcc.org>
+
+      * main.cpp (main): Using ASCODIR environment variable (if set)
+      in order to locate the ASCO binary.  Otherwise it must be 
+      somewhere in the executable PATH.
+
+      * dialogs/simmessage.cpp (startSimulator): Running ASCO
+      appropriately and evaluating results.
+
 2006-08-29  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* fixed bug printing text painting
